<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_ride3"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:layout_marginBottom="24dp"
        android:gravity="center"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_text_view"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Driver's Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_person_outline_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Driver Icon"/>

                <TextView
                    android:id="@+id/textDriverName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_label"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_place_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Location Icon"/>

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Time of Trip -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_schedule_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Time Icon"/>

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ride_details"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:layout_marginTop="16dp"/>

            <!-- Car Type -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Car Type Icon"/>
                <TextView
                    android:id="@+id/textCarType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_type"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Car Model -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Car Type Icon"/>
                <TextView
                    android:id="@+id/textCarModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_model"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Available Seats -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Car Type Icon"/>
                <TextView
                    android:id="@+id/textSeats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avaliable_seats"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Price -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Car Type Icon"/>
                <TextView
                    android:id="@+id/textPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/bookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_ride2"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>