<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:background="@drawable/custom_edittext">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Driver's Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_person_outline_black_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="Driver Icon"/>

            <TextView
                android:id="@+id/textDriverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_place_black_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="Location Icon"/>

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Time of Trip -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_schedule_black_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="Time Icon"/>

            <TextView
                android:id="@+id/textTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_details"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
