<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Driver's Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_person_outline_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Driver Icon"/>

                <TextView
                    android:id="@+id/textViewDriverName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_label"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_place_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Driver Icon"/>

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_schedule_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Driver Icon"/>

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_label"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Status Icon"
                    android:src="@drawable/ic_launcher_status" />

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>