<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Customer's Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_person_outline_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Driver Icon"/>

                <TextView
                    android:id="@+id/textCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_label"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_place_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Location Icon"/>

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Time of Trip -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_schedule_black_24"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Time Icon"/>

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Status of the Trip -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Status Icon"
                    android:src="@drawable/ic_launcher_status" />

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Single Button Layout -->
            <Button
                android:id="@+id/single_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Finish"
                android:textSize="18sp"
                android:backgroundTint="@color/purple"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
